[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/coin.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Coin.gd" type="Script" id=2]
[ext_resource path="res://Sounds/coin.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Spin"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.06367
height = 3.89705

[node name="Coin" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spin"
anims/Spin = SubResource( 1 )

[node name="CoinAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="finished" from="CoinAudio" to="." method="animationFinished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
